@@ -29,6 +29,14 @@
 
 2008-04-09  Tambet Ingo  <tambet@gmail.com>
 
+	* src/connection-editor/page-dsl.c: Finish the implemention to load, validate,
+	and save.
+
+	* src/connection-editor/ce-page-dsl.glade: Add "Show Password" checkbox.
+	Remove "invisible_char" properties.
+
+2008-04-09  Tambet Ingo  <tambet@gmail.com>
+
 	* src/gconf-helpers/gconf-helpers.c
 	(nm_gconf_set_uint_array_helper): Implement.
 	(nm_gconf_get_uint_array_helper): Implement.
